fix: show tier in adnim api

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -7,7 +7,8 @@
   },
   "Cors": {
     "AllowedOrigins": "http://localhost:8080;https://localhost:8080",
-    "ExposedHeaders": ""
+    "ExposedHeaders": "",
+    "AccessControlAllowCredentials": true
   },
   "SwaggerUi": {
     "TokenUrl": "http://localhost:5000/connect/token",
