--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -231,7 +231,7 @@ jobs:
           {
             # The following two lines are for the identity deletion job only
             mv appsettings.override.json appsettings.override.json.bak
-            cp .ci/appsettings.override.${{matrix.database}}.docker.json appsettings.override.json
+            cp .ci/appsettings.override.${{matrix.database}}.local.json appsettings.override.json
 
             dotnet restore Backbone.sln
 
