fix: add access controll allow credentials

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -5,10 +5,11 @@
     "JwtLifetimeInSeconds": 300,
     "ApiKey": "test"
   },
-  "Cors": {
-    "AllowedOrigins": "http://localhost:8080;https://localhost:8080",
-    "ExposedHeaders": ""
-  },
+    "Cors": {
+        "AllowedOrigins": "http://localhost:8080;https://localhost:8080",
+        "ExposedHeaders": "",
+        "AccessControlAllowCredentials": true
+    },
   "SwaggerUi": {
     "TokenUrl": "http://localhost:5000/connect/token",
     "Enabled": true
