--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -15,7 +15,7 @@
                 "MaximumBackoff": 120
             }
         },
-        "SqlDatabaseConfiguration": {
+        "SqlDatabase": {
             "EnableHealthCheck": false
         }
     },
