feat: enable healtcheck by default

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -16,7 +16,7 @@
             }
         },
         "SqlDatabaseConfiguration": {
-            "EnableHealthCheck": false
+            "EnableHealthCheck": true
         }
     },
     "Modules": {
