Extension of the Audit Log (#705)
* feat: deletion process logger

* tests: adapt existing tests for new changes

* feat: add wip implementation

* tests: improve tests

* fix: add AbstractTestsBase & formatting issues

* fix: add AbstractTestsBase to HandlerTests

* fix: remove LogDeletionProcessTests

* chore: rename

* tests: fix

* fix: include github actions test logger

* test: remove unused eventBus

* fix: typo

* fix: delete identity last

* test: rename

* test: improve tests

* fix: missing semicolon

* chore: rename

* fix: update FakeItEasy to 8.3.0 in Challenges module
fix: formatting

* chore: log before command

* chore: rearrange variables for better readability

* refactor: extract method

* chore: rename test variables

* core: remove unnecessary deletion process logger

* chore: rename

* chore: rename message keys for deletion purposes

* fix: configure RelationshipAuditLog to cascade delete on relationship deletion

* test: move SaveEntity extensions to UnitTestTools and make them async

* refactor: log AuditLogEntries during identity deletion via repository instead of via identity

* fix: anonymize recipients of messages as well

* fix: log after deletion

* test: add integration tests Job.IdentityDeletion

* feat: add "Integration" category to integration tests to exclude them from unit test pipeline

* ci: run integration test projects directly instead of filtering for tag

* ci: add appsettings for integration tests of identity deletion job

* ci: replace deprecated env var of docker/build-push-action

* ci: fix integrationTest scripts and run job tests first

* ci: replace configuration before build

* ci: fix test location

* ci: remove unnecessary installation of script dependencies

* test: do not migrate in ActualDeletionWorkerTests

* ci: run integration tests in separate steps

* ci: fix path to compose.test.capi.yml in transport tests

* ci: remove 

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  run-adminUi-checks:
+  adminui-checks:
     runs-on: ubuntu-latest
     name: Run Admin UI Checks
     steps:
@@ -21,7 +21,7 @@ jobs:
       - name: Run Checks
         run: ./.ci/aui/runChecks.sh
 
-  run-adminUi-flutter-checks:
+  adminui-flutter-checks:
     runs-on: ubuntu-latest
     name: Run Admin UI Flutter Checks
     steps:
@@ -46,17 +46,13 @@ jobs:
       - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
-          path: |
-            ./runtime/node_modules
+          path: ./runtime/node_modules
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-      - name: Install script dependencies
-        run: npm install --prefix ./.ci
+          restore-keys: ${{ runner.os }}-npm-
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.x"
+          dotnet-version: "8.x"
       - name: Cache NuGet packages
         uses: actions/cache@v4
         with:
@@ -80,17 +76,13 @@ jobs:
       - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
-          path: |
-            ./runtime/node_modules
+          path: ./runtime/node_modules
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-      - name: Install script dependencies
-        run: npm install --prefix ./.ci
+          restore-keys: ${{ runner.os }}-npm-
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.x"
+          dotnet-version: "8.x"
       - name: Cache NuGet packages
         uses: actions/cache@v4
         with:
@@ -106,6 +98,7 @@ jobs:
     name: Build ${{matrix.image}} Image
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
           - dockerfile: ConsumerApi/Dockerfile
@@ -157,16 +150,12 @@ jobs:
         with:
           path: /tmp/.buildx-${{ matrix.image }}-cache
           key: buildx-${{ matrix.image }}-cache-${{ hashFiles(matrix.dockerfile) }}
-          restore-keys: |
-            buildx-${{ matrix.image }}-cache-
-
-      - name: Install script dependencies
-        run: npm install --prefix ./.ci
+          restore-keys: buildx-${{ matrix.image }}-cache-
 
       - name: Build Image
         uses: docker/build-push-action@v6
         env:
-          DOCKER_BUILD_NO_SUMMARY: true
+          DOCKER_BUILD_SUMMARY: false
         with:
           context: .
           file: ${{ matrix.dockerfile }}
@@ -190,9 +179,20 @@ jobs:
           rm -rf /tmp/.buildx-${{ matrix.image }}-cache
           mv /tmp/.buildx-${{ matrix.image }}-cache-new /tmp/.buildx-${{ matrix.image }}-cache
 
-  integration-test-sqlserver:
-    name: Run Integration Tests (on SQL Server)
+  integration-test:
+    name: Run ${{matrix.test-project.display-name}} Integration Tests (on ${{matrix.database}})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        database: [sqlserver, postgres]
+        test-project:
+          - display-name: admin-api
+            path: AdminApi/test/AdminApi.Tests.Integration
+          - display-name: consumer-api
+            path: ConsumerApi.Tests.Integration
+          - display-name: identity-deletion-job
+            path: Jobs/test/Job.IdentityDeletion.Tests.Integration
     needs: image-test-builds
     steps:
       - name: Checkout
@@ -209,8 +209,12 @@ jobs:
         with:
           dotnet-version: 8.x
 
-      - name: Install script dependencies
-        run: npm install --prefix ./.ci
+      - name: Cache NuGet packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+          restore-keys: ${{ runner.os }}-nuget-
 
       - name: Download cached Docker images
         uses: actions/download-artifact@v4
@@ -219,76 +223,51 @@ jobs:
           pattern: docker-*
           merge-multiple: true
 
-      - name: Load Docker images
-        run: ./.ci/loadDockerImages.sh
+      - name: Load Docker images and build test code
+        run: |
+          {
+            ./.ci/loadDockerImages.sh
+          } &
+          {
+            # The following two lines are for the identity deletion job only
+            mv appsettings.override.json appsettings.override.json.bak
+            cp .ci/appsettings.override.${{matrix.database}}.local.json appsettings.override.json
+
+            dotnet restore Backbone.sln
+
+            dotnet build --no-restore Backbone.sln
+          }
+          wait
+
+      - name: Start compose stack
+        run: |
+          docker compose -f ./.ci/compose.test.yml -f ./.ci/compose.test.${{matrix.database}}.yml down -v
+          docker compose -f ./.ci/compose.test.yml -f ./.ci/compose.test.${{matrix.database}}.yml up --no-build --wait -d
 
       - name: Run integration tests
-        run: ./.ci/integrationTest.sqlserver.sh
+        run: dotnet test --no-restore --no-build --logger "GitHubActions;summary.includeNotFoundTests=false;summary.includeSkippedTests=false;summary.includePassedTests=false" ${{matrix.test-project.path}}
+        env:
+          ADMIN_API_BASE_ADDRESS: "http://localhost:5173"
+          CONSUMER_API_BASE_ADDRESS: "http://localhost:5000"
 
       - name: Save Docker Logs
         if: failure()
-        run: docker compose -f ./.ci/docker-compose.test.yml -f ./.ci/docker-compose.test.sqlserver.yml logs > docker-log.txt
+        run: docker compose -f ./.ci/compose.test.yml -f ./.ci/compose.test.${{matrix.database}}.yml logs > logs.txt
 
       - name: Archive logs
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: integration-test-sqlserver-docker-logs
-          path: docker-log.txt
-        env:
-          DOTNET_CONSOLE_ANSI_COLOR: true
+          name: ${{matrix.test-project.display-name}}-${{matrix.database}}
+          path: logs.txt
 
-  integration-test-postgres:
-    name: Run Integration Tests (on Postgres)
+  transport-test:
+    name: Run transport Tests (on ${{matrix.database}})
     runs-on: ubuntu-latest
-    needs: image-test-builds
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: latest
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
-
-      - name: Setup NuGet
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.x
-
-      - name: Install script dependencies
-        run: npm install --prefix ./.ci
-
-      - name: Download cached Docker images
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp
-          pattern: docker-*
-          merge-multiple: true
-
-      - name: Load Docker images
-        run: ./.ci/loadDockerImages.sh
-
-      - name: Run integration tests
-        run: ./.ci/integrationTest.postgres.sh
-
-      - name: Save Docker Logs
-        if: failure()
-        run: docker compose -f ./.ci/docker-compose.test.yml -f ./.ci/docker-compose.test.postgres.yml logs > docker-log.txt
-
-      - name: Archive logs
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: integration-test-postgres-docker-logs
-          path: docker-log.txt
-        env:
-          DOTNET_CONSOLE_ANSI_COLOR: true
-
-  transport-test-sqlserver:
-    name: Run transport Tests (on SQL Server)
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        database: [sqlserver, postgres]
     needs: image-test-builds
     steps:
       - name: Checkout backbone repository
@@ -319,8 +298,8 @@ jobs:
       - name: Load Docker images
         run: ./backbone/.ci/loadDockerImages.sh
 
-      - name: Run Consumer API & Admin API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml up -d --no-build
+      - name: Start compose stack
+        run: docker compose -f ./backbone/.ci/compose.test.yml -f ./backbone/.ci/compose.test.${{matrix.database}}.yml up --no-build --wait -d
 
       - name: Install runtime dependencies
         working-directory: ./runtime
@@ -338,81 +317,17 @@ jobs:
 
       - name: Save Docker Logs
         if: failure()
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml logs > docker-log.txt
+        run: docker compose -f ./backbone/.ci/compose.test.yml -f ./backbone/.ci/compose.test.${{matrix.database}}.yml logs > logs.txt
 
       - name: Archive logs
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: transport-test-sqlserver-docker-logs
-          path: docker-log.txt
+          name: transport-test-${{matrix.database}}-docker-logs
+          path: logs.txt
 
-      - name: Stop Consumer API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml down
-
-  transport-test-postgres:
-    name: Run transport Tests (on Postgres)
-    runs-on: ubuntu-latest
-    needs: image-test-builds
-    steps:
-      - name: Checkout backbone repository
-        uses: actions/checkout@v4
-        with:
-          path: backbone
-
-      - name: Checkout runtime repository
-        uses: actions/checkout@v4
-        with:
-          repository: nmshd/runtime
-          path: runtime
-          ref: release/v5
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: latest
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
-
-      - name: Download cached Docker images
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp
-          pattern: docker-*
-          merge-multiple: true
-
-      - name: Load Docker images
-        run: ./backbone/.ci/loadDockerImages.sh
-
-      - name: Run Consumer API & Admin API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml up -d --no-build
-
-      - name: Install runtime dependencies
-        working-directory: ./runtime
-        run: npm install
-
-      - name: Run transport Tests
-        working-directory: ./runtime/packages/transport
-        env:
-          NMSHD_TEST_BASEURL: http://localhost:5000
-          NMSHD_TEST_CLIENTID: test
-          NMSHD_TEST_CLIENTSECRET: test
-          NMSHD_TEST_BASEURL_ADMIN_API: http://localhost:5173
-          NMSHD_TEST_ADMIN_API_KEY: test
-        run: npm run test:local:lokijs
-
-      - name: Save Docker Logs
-        if: failure()
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml logs > docker-log.txt
-
-      - name: Archive logs
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: transport-test-postgres-docker-logs
-          path: docker-log.txt
-
-      - name: Stop Consumer API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml down
+      - name: Stop compose stack
+        run: docker compose -f ./backbone/.ci/compose.test.${{matrix.database}}.yml -f ./backbone/.ci/compose.test.yml down
 
   build-helm-chart:
     name: Build Helm Chart
