--- a/.ci/compose.test.yml
+++ b/.ci/compose.test.yml
@@ -54,6 +54,11 @@ services:
     image: sse-server:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      database-migrator:
+        condition: service_completed_successfully
+      rabbitmq:
+        condition: service_started
     configs:
       - source: Config
         target: app/appsettings.override.json
