fix: actually use anonymized address on anonymization of RelationshipTemplateAllocations

--- a/.ci/appsettings.override.sqlserver.json
+++ b/.ci/appsettings.override.sqlserver.json
@@ -80,6 +80,9 @@
             }
         },
         "Relationships": {
+            "Application": {
+                "DidDomainName": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "SqlServer",
