--- a/docker-compose/consumerapi.appsettings.override.json
+++ b/docker-compose/consumerapi.appsettings.override.json
@@ -86,6 +86,9 @@
             }
         },
         "Relationships": {
+            "Application": {
+                "DidDomainName": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
