--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -101,6 +101,9 @@
       }
     },
     "Relationships": {
+      "Application": {
+        "DidDomainName": "localhost"
+      },
       "Infrastructure": {
         "SqlDatabase": {
           "Provider": "Postgres",
