feat: don't return decomposed messages

--- a/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
+++ b/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\BuildingBlocks\src\Crypto\Crypto.csproj"/>
+        <ProjectReference Include="..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj"/>
         <ProjectReference Include="..\ConsumerApi.Sdk\ConsumerApi.Sdk.csproj"/>
         <ProjectReference Include="..\ConsumerApi\ConsumerApi.csproj"/>
     </ItemGroup>
