--- a/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
+++ b/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
@@ -26,10 +26,8 @@
         <ProjectReference Include="..\..\..\Modules\Tokens\src\Tokens.ConsumerApi\Tokens.ConsumerApi.csproj"/>
     </ItemGroup>
 
-    <ItemGroup>
-        <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
-
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Exec Command="del appsettings.override.json"/>
+        <Exec Command="mklink /h appsettings.override.json ..\..\..\appsettings.override.json"/>
+    </Target>
 </Project>
