chore: Add hard links to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,10 @@ dist
 
 # flutter
 !AdminUi/packages/*
+
+# Hardlinks for appsettings.override.json
+AdminApi/src/AdminApi/appsettings.override.json
+ConsumerApi/appsettings.override.json
+DatabaseMigrator/appsettings.override.json
+EventHandlerService/src/EventHandlerService/appsettings.override.json
+Jobs/src/Job.IdentityDeletion/appsettings.override.json
