chore: Remove working directory from launch settings

--- a/Jobs/src/Job.IdentityDeletion/Properties/launchSettings.json
+++ b/Jobs/src/Job.IdentityDeletion/Properties/launchSettings.json
@@ -2,18 +2,15 @@
   "profiles": {
     "Job.IdentityDeletion.CancelStaleDeletionProcesses": {
       "commandName": "Project",
-      "commandLineArgs": "--Worker CancelStaleDeletionProcessesWorker",
-      "workingDirectory": "bin/Debug/$(TargetFramework)"
+      "commandLineArgs": "--Worker CancelStaleDeletionProcessesWorker"
     },
     "Job.IdentityDeletion.ActualDeletion": {
       "commandName": "Project",
-      "commandLineArgs": "--Worker ActualDeletionWorker",
-      "workingDirectory": "bin/Debug/$(TargetFramework)"
+      "commandLineArgs": "--Worker ActualDeletionWorker"
     },
     "Job.IdentityDeletion.SendGracePeriodAndApprovalReminders": {
       "commandName": "Project",
-      "commandLineArgs": "--Worker SendGracePeriodAndApprovalRemindersWorker",
-      "workingDirectory": "bin/Debug/$(TargetFramework)"
+      "commandLineArgs": "--Worker SendGracePeriodAndApprovalRemindersWorker"
     }
   }
 }
