--- a/DatabaseMigrator/Properties/launchSettings.json
+++ b/DatabaseMigrator/Properties/launchSettings.json
@@ -3,8 +3,7 @@
   "profiles": {
     "Default": {
       "commandName": "Project",
-      "environmentVariables": {},
-      "workingDirectory": "bin/Debug/$(TargetFramework)"
+      "environmentVariables": {}
     }
   }
 }
