--- a/AdminApi/src/AdminApi/AdminApi.csproj
+++ b/AdminApi/src/AdminApi/AdminApi.csproj
@@ -83,7 +83,7 @@
         </ItemGroup>
     </Target>
 
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
         <Exec Command="del appsettings.override.json"/>
         <Exec Command="mklink /h appsettings.override.json ..\..\..\appsettings.override.json"/>
     </Target>
