--- a/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
+++ b/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
@@ -38,7 +38,7 @@
         <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.Infrastructure\Devices.Infrastructure.csproj"/>
     </ItemGroup>
 
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
         <Exec Command="del appsettings.override.json"/>
         <Exec Command="mklink /h appsettings.override.json ..\..\..\appsettings.override.json"/>
     </Target>
