--- a/Modules/Relationships/src/Relationships.Application/Relationships.Application.csproj
+++ b/Modules/Relationships/src/Relationships.Application/Relationships.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
@@ -11,4 +11,10 @@
 		<ProjectReference Include="..\Relationships.Common\Relationships.Common.csproj" />
 		<ProjectReference Include="..\Relationships.Domain\Relationships.Domain.csproj" />
 	</ItemGroup>
+
+    <ItemGroup Condition="'$(Configuration)' == 'Release'">
+        <Compile Remove="**\*.Tests.cs" />
+        <Compile Remove="TestHelpers\*" />
+    </ItemGroup>
+
 </Project>
