--- a/DatabaseMigrator/DatabaseMigrator.csproj
+++ b/DatabaseMigrator/DatabaseMigrator.csproj
@@ -55,7 +55,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
-        <Exec Command="rm appsettings.override.json"/>
+        <Exec Command="rm -f appsettings.override.json"/>
         <Exec Command="mklink /h appsettings.override.json ..\appsettings.override.json"/>
     </Target>
 </Project>
