--- a/DatabaseMigrator/DatabaseMigrator.csproj
+++ b/DatabaseMigrator/DatabaseMigrator.csproj
@@ -56,6 +56,6 @@
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
         <Exec Command="rm -f appsettings.override.json"/>
-        <Exec Command="mklink /h appsettings.override.json ..\appsettings.override.json"/>
+        <Exec Command="ln -f ..\appsettings.override.json appsettings.override.json"/>
     </Target>
 </Project>
