--- a/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
+++ b/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
@@ -28,6 +28,6 @@
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
         <Exec Command="rm -f appsettings.override.json"/>
-        <Exec Command="ln -f ..\..\..\appsettings.override.json appsettings.override.json"/>
+        <Exec Command="ln -f ../../../appsettings.override.json appsettings.override.json"/>
     </Target>
 </Project>
