Problems with common appsettings.override.json file during local development/testing (#740)
* chore: Remove content tag, create hard link on build

* chore: Add hard links to gitignore

* chore: Remove working directory from launch settings

* fix: Create hardlinks only in Debug mode

* fix: Check if appsettings.override exists before deleting it

* fix: Fix directory paths, add then to if syntax

* fix: Try putting the deletion in braces

* fix: Use rm instead of del

* fix: Force the deletion (should prevent error if file doesn't exist)

* fix: Use ln instead of mklink

* fix: Use foreslashes instead of backslashes

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
+++ b/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
@@ -26,10 +26,8 @@
         <ProjectReference Include="..\..\..\Modules\Tokens\src\Tokens.ConsumerApi\Tokens.ConsumerApi.csproj"/>
     </ItemGroup>
 
-    <ItemGroup>
-        <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
-
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
+        <Exec Command="rm -f appsettings.override.json"/>
+        <Exec Command="ln -f ../../../appsettings.override.json appsettings.override.json"/>
+    </Target>
 </Project>
