--- a/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
+++ b/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
@@ -38,9 +38,8 @@
         <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.Infrastructure\Devices.Infrastructure.csproj"/>
     </ItemGroup>
 
-    <ItemGroup>
-        <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
+        <Exec Command="rm -f appsettings.override.json"/>
+        <Exec Command="ln -f ../../../appsettings.override.json appsettings.override.json"/>
+    </Target>
 </Project>
